tdf#113894 release ctrl of ctrl+v in input line should strip formatting

Change-Id: I1cd1501d6f20765d7e5a90a9ccb07745758682d4
Reviewed-on: https://gerrit.libreoffice.org/44880
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>